[package]
name = "climacell_exporter"
version = "0.1.0"
authors = ["tombowditch <me@tombowdit.ch>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
prometheus = "0.10.0"
lazy_static = "1.4.0"
reqwest = { version = "0.10.6", features = ["json"] }
tokio = { version = "0.2.21", features = ["full"]}
tokio-util = { version = "0.3.0", features = ["full"] }
serde = { version = "1.0.114", features = ["derive"] }
serde_json = "1.0.56"
serde_derive = "1.0.115"
warp = "0.2"
